# gpt

./: README.md  pyproject.toml
gpt/: get_data.py  main.py  selector.py
