[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt"
version = "0.2"
description = "OpenAI GPT chat from linux terminal"
authors = [
    { name="miguehm", email="miguel.hernandezmor@alumno.buap.mx" }
]
dependencies = [
    "openai>=1.38.0",
    "typer>=0.12.3"
]

[project.scripts]
gpt = "gpt.main:app"
