[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt"
version = "0.3"
description = "OpenAI GPT chat from linux terminal"
authors = [
    { name="miguehm", email="miguel.hernandezmor@alumno.buap.mx" }
]
dependencies = [
    "openai>=1.38.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "readchar>=4.1.0",
    "tinydb>=4.8.0"
]

[project.scripts]
gpt = "gpt.main:app"
